added: login page

--- a/site/components/navbar.html
+++ b/site/components/navbar.html
@@ -42,7 +42,7 @@
                         </label>
                     </div>
                     <div id="dropdownmenu"
-                        class="lg:absolute lg:px-0 px-4 min-w-max shadow rounded hidden bg-white  dark:bg-gray-800 dark:lg:bg-gray-900 border border-gray-400">
+                        class="lg:absolute lg:px-0 px-4 shadow rounded hidden bg-white  dark:bg-gray-800 dark:lg:bg-gray-900 border border-gray-400">
                         <ul>
                             <li
                                 class="stroke-gray-600 hover:stroke-gray-900 dark:hover:stroke-white dark:stroke-gray-300">
@@ -71,7 +71,7 @@
                 </li>
                 <li class="mr-2">
                     <a class="inline-block py-2 px-4 text-gray-600 no-underline hover:text-gray-900 dark:hover:text-white dark:text-gray-300"
-                        href="/login">Login</a>
+                        href="/pages/login.html">Login</a>
                 </li>
                 <li class="mr-2">
                     <button id="theme-toggle" type="button"
