--- a/site/components/navbar.html
+++ b/site/components/navbar.html
@@ -64,6 +64,16 @@
                                         <path d="M4 4v7a4 4 0 0 0 4 4h11" />
                                     </svg>Conways</a>
                             </li>
+                            <li
+                                class="stroke-gray-600 hover:stroke-gray-900 dark:hover:stroke-white dark:stroke-gray-300">
+                                <a class="flex hover:bg-gray-200 dark:hover:bg-gray-800 dark:hover:text-white dark:text-gray-300 text-gray-600 hover:text-gray-900"
+                                    href="/pages/secrets/secret.html">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                        stroke-width="2" class="mt-0.5">
+                                        <path d="M14 9l6 6-6 6" />
+                                        <path d="M4 4v7a4 4 0 0 0 4 4h11" />
+                                    </svg>Secret</a>
+                            </li>
                         </ul>
                     </div>
 
